css/app.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Patrick Hand', cursive;
}

:root {
    --blue: #0061ff;
    --mid-blue: #0093CE;
    --light-blue: #B4D0E7;
    --dark: black;
    --bordeaux: #61082B;
    --green: #A2D39B;
    --yellow: #FFD830;
    --dark-red: #D10020;
    --light-gray: #f5f5f5;
    --light-red: #FF1C1C;
    --dark-blue: #0D2481;
}

.blue-bk {
    background-color: var(--blue);
}
.light-blue{
    background-color: var(--light-blue);
}
.dark {
    background-color: var(--dark)
}
.dark-blue{
    background-color: var(--dark-blue);
}
.bordeaux {
    background-color: var(--bordeaux)
}
.green {
    background-color: var(--green)
}
.yellow {
    background-color: var(--yellow)
}
.dark-red {
    background-color: var(--dark-red);
}
.light-gray {
    background-color: var(--light-gray);
}
.light-red {
    background-color: var(--light-red);
}
.mid-blue {
    background-color: var(--mid-blue);
}

.container-fluid {
    max-width: 100%;
}

ul, li {
    list-style: none;
}

ul {
    margin: 20px 0;
}

.header-container {
    padding: 10px;
    font-size: 18px;
}
.header-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header-col {
   display: inline-block;
   
}

.header-ul {
    display: flex;
    flex-direction: row;
}

.header-ul > li {
    padding: 10px;
    margin: 0 10px;
}

.logo-small {
    display: block;
}

a {
    text-decoration: none;
}

.blue-button {
    background-color: #0061ff;
    color: white;
    padding: 4px 18px;
}

.container-big {
    padding: 15px;
    max-width: 1100px;
    margin: 0 auto;
}

p {
    margin-bottom: 22px;
    font-size: 15px;
}

.container-small {
    
    max-width: 900px;
    margin: 140px auto 0;
    background-color: white;
}

.hero {
    background-color: #B4D0E7;
}

h1 {
    margin-top: 60px;
    font-size: 60px;
    text-align: left;
}

.debug .row {
    display: flex;
}

i {
    padding: 5px;
}
.img {
    max-width: 100%;
    
}

.arrow-down {
    font-size: 40px;
    text-align: bottom;
    margin-top: 40px;
}


.row {
    display: flex;
    justify-content: space-between;
    margin-top: 60px;
}

.col-8 {
	flex-basis: calc((100% / 12) * 8);
    
}

.col-4 {
	flex-basis: calc((100% / 12) * 4);
    display: flex;
    flex-direction: column;
    
}


h2 {
    font-size: 48px;
}

.blue-circle {
    border: 6px solid #0061ff;
    border-radius: 50%;
    color: transparent;
    margin-right: 5px;
    font-size: 10px;
}

.grey-circle {
    border: 2px solid #D6D6D8;
    border-radius: 50%;
    color: transparent;
    margin-right: 5px;
}

.cta-span {
    margin-right: 50px;
}

.cta-payment {
    margin-top: 50px;
    margin-bottom: 50px
}

.container-col {
    display: flex;
    flex-direction: column;
    max-width: 940px;
    margin: 0 auto;
}

.row-main {
    display: flex;
	flex-wrap: wrap;
    justify-content: space-between;
}

.row-main > .col-4 {
    flex-basis: calc((100% / 12) * 4);
    padding: 0 20px;
}

.card-title {
    text-align: center;
    line-height: 40px;
    border:  1px solid rgb(120, 120, 120);
}

.card-content {
    padding: 20px;
    border:  1px solid rgb(120, 120, 120);
}



.link-free-trial {
    margin-top: 60px;
    text-align: left;
    font-size: 18px;
}

.buy-now {
    text-decoration: underline;
}

hr {
    margin: 30px 0px 40px 0px;
    width: 50px;
    border:  1px solid rgb(120, 120, 120);
}

.col-footer{
    margin-top: 40px;
}

.blue {
    color: #0061ff;
}

.container-col-2 {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-top: 50px;
    padding: 0 20px;
}
.card-title-long {
    text-align: center;
    border-bottom: 1px solid grey;
    line-height: 40px;
    border:  1px solid rgb(120, 120, 120);
}
.row-main-2 {
    flex-direction: column;
    display: flex;
	flex-wrap: wrap;
    justify-content: space-between;
    border:  1px solid rgb(120, 120, 120);
    border-top: none;
    height: 140px;
}
.col-9 {
	flex-basis: calc((100% / 12) * 9);
}

.card-content-2 {
    padding: 10px;
    margin-top: 20px;
    margin-left: 10px;
}

.col-3 {
    display: flex;
    flex-basis: calc((100% / 12) * 3);
    justify-content: end;
    margin-top: 40px;
    margin-right: 20px;
}

.partner {
    max-width: 900px;
    margin: 140px auto;
}

.partner-row {
    display: flex;
    flex: wrap;
    margin-top: 40px;
    margin-bottom: 40px;
}


.partner-col-8 {
    flex-basis: calc((100% / 12) * 8);
}

.partner-col-4 {
    flex-basis: calc((100% / 12) * 4);
    padding: 45px;
    line-height: 25px;
}

.partner-description {
    margin: 20px 0 40px 0;
}

.white-button{
    background-color: white;
    color: grey;
    padding: 4px 18px;
    border: 1px solid grey;
}

.margin-top {
    margin-top: 60px;
}

.dropbox-teams .container-small > p {
    margin-top: 50px;
    text-decoration: underline;
    margin-bottom: 100px;
}

.teams {
    display: flex;
    flex-wrap: wrap;
}

.teams-col-6 {
    flex-basis: calc((100% / 12) * 6);
    display: flex;
    flex-direction: column;
    width: 50%;
}

.row-main__clients {
    display: flex;
    flex-direction: row;
}


.teams-col-4 {
    flex-basis: calc((100% / 12) * 4);
    display: flex;
    flex-direction: column;
}

.card-content__option-cards{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}
.card-content__option-cards.green {
    outline: 13px solid #CBDEC5;
    outline-offset: -13px;
}

.teams-logo {
    filter: invert(1);
    max-width: 50%;
    aspect-ratio: 0.5;
}

.card-content__option-cards__middle {
    background-color: var(--light-gray);
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: left;
    padding: 50px;
    height: 100%;
}
.bigger-logo {
    max-width: 50%;
    margin-bottom: 40px;
}

.middle-teams-description > p {
    display: flex;
    font-size: 20px;
}

.dropbox-teams {
   
}

.container-big-viewport {
    background-color: var(--light-blue);
}

.row-main-3 {
    flex-direction: column;
    display: flex;
	flex-wrap: wrap;
    justify-content: space-between;
    border-top: none;
    height: 140px;
    margin: 60px 0;
}

.card-content-3 {
    display: flex;
    justify-content: center;
}

.bordeaux-text {
    color: var(--bordeaux);
}

.white-button-no-border {
    background-color: var(--light-gray);
    color: var(--dark);
    padding: 4px 18px;
}

.margin-top-0 {
    margin-top: 0;
}

